# carvendor

./: pyproject.toml
carvendor/: ModelInterface.py  carvendor.py  main.py  test_main.py
carvendor/saves/: encoder.save  model.save
