[tool.poetry]
name = "carvendor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
scikit-learn = "^1.1.3"
black = "^22.10.0"
requests = "^2.28.1"
httpx = "^0.23.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
